testdata/baselines/reference/submodule/compiler/asyncFunctionContextuallyTypedReturns.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'Promise'.
error TS2318: Cannot find global type 'PromiseLike'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
asyncFunctionContextuallyTypedReturns.ts(1,46): error TS2304: Cannot find name 'PromiseLike'.
asyncFunctionContextuallyTypedReturns.ts(2,18): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(3,24): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(5,64): error TS2304: Cannot find name 'PromiseLike'.
asyncFunctionContextuallyTypedReturns.ts(6,36): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(7,42): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(10,53): error TS2304: Cannot find name 'PromiseLike'.
asyncFunctionContextuallyTypedReturns.ts(11,13): error TS7006: Parameter 'abc' implicitly has an 'any' type.
asyncFunctionContextuallyTypedReturns.ts(11,27): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(12,19): error TS7006: Parameter 'def' implicitly has an 'any' type.
asyncFunctionContextuallyTypedReturns.ts(12,33): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(18,6): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(19,10): error TS7006: Parameter 'a' implicitly has an 'any' type.
asyncFunctionContextuallyTypedReturns.ts(27,6): error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
asyncFunctionContextuallyTypedReturns.ts(28,10): error TS7006: Parameter 'a' implicitly has an 'any' type.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'Promise'.
!!! error TS2318: Cannot find global type 'PromiseLike'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== asyncFunctionContextuallyTypedReturns.ts (15 errors) ====
    declare function f(cb: (v: boolean) => [0] | PromiseLike<[0]>): void;
                                                 ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    f(v => v ? [0] : Promise.reject());
                     ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    f(async v => v ? [0] : Promise.reject());
                           ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    declare function g(cb: (v: boolean) => "contextuallyTypable" | PromiseLike<"contextuallyTypable">): void;
                                                                   ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    g(v => v ? "contextuallyTypable" : Promise.reject());
                                       ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    g(async v => v ? "contextuallyTypable" : Promise.reject());
                                             ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    type MyCallback = (thing: string) => void;
    declare function h(cb: (v: boolean) => MyCallback | PromiseLike<MyCallback>): void;
                                                        ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PromiseLike'.
    h(v => v ? (abc) => { } : Promise.reject());
                ~~~
!!! error TS7006: Parameter 'abc' implicitly has an 'any' type.
                              ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    h(async v => v ? (def) => { } : Promise.reject());
                      ~~~
!!! error TS7006: Parameter 'def' implicitly has an 'any' type.
                                    ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
    
    // repro from #29196
    const increment: (
      num: number,
      str: string
    ) => Promise<((s: string) => any) | string> | string = async (num, str) => {
         ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
      return a => {
             ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        return a.length
      }
    }
    
    const increment2: (
      num: number,
      str: string
    ) => Promise<((s: string) => any) | string> = async (num, str) => {
         ~~~~~~~
!!! error TS2583: Cannot find name 'Promise'. Do you need to change your target library? Try changing the 'lib' compiler option to 'es2015' or later.
      return a => {
             ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        return a.length
      }
    }
    